# mdp2p

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  bundle.py  demo.py  docker-compose.yml  fetch.py  install.ps1  install.sh  mdp2p_logging.py  naming.py  peer.py  peer_zero.py  pinstore.py  protocol.py  publish.py  pyproject.toml  requirements.txt  tracker.py  wire.py
.claude/: settings.local.json
.github/workflows/: release.yml
bundle/: __init__.py  _canonical.py  crypto.py  manifest.py  name_records.py  paths.py  serialization.py
mdp2p_client/: __init__.py  __main__.py  app.py  colors.py  commands.py  config.py  fetch_flow.py  formatting.py  i18n.py  interactive.py  permissions.py  publish_flow.py  review_flow.py  scoring.py  serve_flow.py  service.py  tui.py  ui.py
mdp2p_client/locales/: ar.json  en.json  fr.json  hi.json  zh.json
packaging/: entry.py  mdp2p.spec
peer/: __init__.py  bundle_protocol.py  host_factory.py  lifecycle.py  peer.py  review_protocol.py  reviewer_daemon.py
prototypes/libp2p/: README.md  dht_demo.py  hello.py  nat_demo.py  requirements.txt  run_demo.py
review/: __init__.py  record.py  selection.py  taxonomy.py
scripts/: debug_dial.py
tests/: test_bundle.py  test_client_scoring.py  test_config_reviewer_fields.py  test_dht_peer.py  test_language_cli.py  test_naming.py  test_naming_async_review.py  test_naming_reviewers.py  test_peer.py  test_peer_review_helpers.py  test_pinstore.py  test_protocol.py  test_relay_peer.py  test_review_flow.py  test_review_protocol.py  test_review_record.py  test_review_selection.py  test_reviewer_cli.py  test_reviewer_daemon.py  test_taxonomy.py  test_tracker.py  test_trust_policy.py  test_trust_scorer.py  test_trust_store.py
trust/: __init__.py  policy.py  scorer.py  signal.py  store.py
