[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdp2p"
version = "0.1.0"
description = "MDP2P — Decentralized Markdown peer-to-peer publishing"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
mdp2p = "mdp2p_client.__main__:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["bundle", "peer", "protocol"]

[tool.setuptools.packages.find]
include = ["mdp2p_client*"]

[tool.setuptools.package-data]
mdp2p_client = ["locales/*.json"]
