[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdp2p"
version = "0.2.0-dev"
description = "MDP2P — Decentralized Markdown peer-to-peer publishing"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "libp2p==0.6.0",
    "trio==0.33.0",
    "multiaddr==0.0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-trio>=0.8"]

[project.scripts]
mdp2p = "mdp2p_client.__main__:run"

[tool.setuptools]
py-modules = ["bundle", "naming", "peer", "peer_zero", "pinstore", "wire"]

[tool.setuptools.packages.find]
include = ["mdp2p_client*"]

[tool.setuptools.package-data]
mdp2p_client = ["locales/*.json"]
